--- a/.gitignore
+++ b/.gitignore
@@ -30,8 +30,8 @@ build/
 local.properties
 *.iml
 android/gradle.properties
-android/android.jks
-android/app/src/res/values/strings.xml
+android/app/android.jks
+android/app/src/main/res/values/strings.xml
 
 # node.js
 #
