--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "react": "15.4.1",
-    "react-native": "0.39.2"
+    "react-native": "0.39.2",
+    "react-native-facebook-account-kit": "^0.5.2"
   },
   "devDependencies": {
     "babel-jest": "18.0.0",
