--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "native-base": "^0.5.20",
     "react": "15.4.1",
     "react-native": "0.40.0",
     "react-native-facebook-account-kit": "^0.5.2"
