Native base Components added to Home, Dashboard and CreateTask Components

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -147,3 +147,9 @@ task copyDownloadableDepsToLibs(type: Copy) {
     from configurations.compile
     into 'libs'
 }
+
+project.ext.vectoricons = [
+    iconFontNames: [ 'MaterialIcons.ttf', 'EvilIcons.ttf' ]             // font filenames
+]
+
+apply from: "../../node_modules/react-native-vector-icons/fonts.gradle"
