--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "native-base": "^0.5.20",
     "react": "15.4.1",
     "react-native": "0.40.0",
-    "react-native-facebook-account-kit": "^0.5.2"
+    "react-native-facebook-account-kit": "^0.5.2",
+    "react-native-vector-icons": "^4.0.0"
   },
   "devDependencies": {
     "babel-jest": "18.0.0",
