--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "test": "jest"
   },
   "dependencies": {
-    "native-base": "^0.5.20",
+    "native-base": "^0.5.22",
     "react": "15.4.1",
     "react-native": "0.40.0",
     "react-native-facebook-account-kit": "^0.5.2",
-    "react-native-vector-icons": "^4.0.0"
+    "react-native-side-menu": "^0.20.1",
+    "react-native-vector-icons": "^4.0.0",
+    "react-redux": "^5.0.2",
+    "redux": "^3.6.0"
   },
   "devDependencies": {
     "babel-jest": "18.0.0",
