--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "taskapp",
-  "version": "0.0.1",
+  "version": "1.0.1",
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
@@ -10,6 +10,7 @@
     "native-base": "^0.5.22",
     "react": "15.4.1",
     "react-native": "0.40.0",
+    "react-native-elements": "^0.9.3",
     "react-native-facebook-account-kit": "^0.5.2",
     "react-native-side-menu": "^0.20.1",
     "react-native-vector-icons": "^4.0.0",
