--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "taskapp",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "test": "jest"
   },
   "dependencies": {
+    "moment": "^2.17.1",
     "native-base": "^0.5.22",
     "react": "15.4.1",
     "react-native": "0.40.0",
@@ -15,7 +16,8 @@
     "react-native-side-menu": "^0.20.1",
     "react-native-vector-icons": "^4.0.0",
     "react-redux": "^5.0.2",
-    "redux": "^3.6.0"
+    "redux": "^3.6.0",
+    "socket.io-client": "^1.7.2"
   },
   "devDependencies": {
     "babel-jest": "18.0.0",
