--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,9 +2,9 @@
     package="com.taskapp">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
-    <uses-permission android:name="android.permission.READ_SMS" />
-    
+     <uses-permission android:name="android.permission.RECEIVE_SMS" />
+          <uses-permission android:name="android.permission.READ_SMS" />
+
     <uses-sdk
         android:minSdkVersion="16"
         android:targetSdkVersion="22" />
