--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -80,7 +80,7 @@ def enableSeparateBuildPerCPUArchitecture = false
 /**
  * Run Proguard to shrink the Java bytecode in release builds.
  */
-def enableProguardInReleaseBuilds = false
+def enableProguardInReleaseBuilds = true
 
 android {
     compileSdkVersion 23
@@ -89,8 +89,8 @@ android {
         applicationId "com.taskapp"
         minSdkVersion 16
         targetSdkVersion 23
-        versionCode 9
-        versionName "3.0.0"
+        versionCode 10
+        versionName "3.1.0"
         ndk {
             abiFilters "armeabi-v7a", "x86"
         }
@@ -114,7 +114,7 @@ android {
     buildTypes {
         release {
             signingConfig signingConfigs.release
-            minifyEnabled enableProguardInReleaseBuilds
+            minifyEnabled true
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
         }
     }
