--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "test": "jest"
   },
   "dependencies": {
+    "babel-preset-react-native-stage-0": "^1.0.1",
     "moment": "^2.17.1",
     "native-base": "^0.5.22",
     "react": "15.4.1",
     "react-native": "0.40.0",
+    "react-native-code-push": "^1.17.0-beta",
     "react-native-elements": "^0.9.3",
     "react-native-facebook-account-kit": "^0.5.2",
     "react-native-side-menu": "^0.20.1",
